2007-11-26  Badlop  <badlop@process-one.net>

	* src/ejabberdctl.template: Removed bashisms (EJAB-399). Set environment variables instead of passing parameters when calling erl (EJAB-421). Write erl_crash.dump in the log/ directory, with unique filename (EJAB-433).

	* src/ejabberd_ctl.erl: Improvements in the help messages (EJAB-399).

	* doc/guide.tex: Improvements in sections ejabberdctl, and Install from Source (EJAB-399).

2007-11-25  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd_router.erl: Bugfix

	* src/ejabberd_s2s_out.erl: Bugfix

	* src/ejabberd_sm.erl: Optimized check_max_sessions (thanks to
	Christophe Romain)

2007-11-22  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_config.erl: Improved error message when ejabberd
	config file is not found.

2007-11-16  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberd_auth_internal.erl: Better count management and
	batch users retrieval internal database

2007-11-14  Mickael Remond  <mremond@process-one.net>

	* examples/extauth/check_pass_null.pl: Fixed external
	authentication example script (EJAB-404)

2007-11-05  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_config.erl: Refactoring: Move internal
	data structure to an include file.
	* src/ejabberd_config.hrl: Likewise.

2007-11-03  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_auth.erl: Better count management and batch users
	retrieval for relational database (Thanks to Massimiliano Mirra).
	* src/ejabberd_auth_odbc.erl: Likewise.
	* src/odbc/odbc_queries.erl: Likewise.

2007-11-02  Mickael Remond  <mremond@process-one.net>

	* src/web/ejabberd_http_poll.erl: Refactoring. Moved c2s limits
	acquisition to a separate module.
	* src/ejabberd_c2s_config.erl: Likewise.
	
2007-11-01  Mickael Remond  <mremond@process-one.net>

	* src/web/ejabberd_http_poll.erl: Support for c2s ACL access,
	max_stanza and shaper on http_poll connections (EJAB-243,
	EJAB-415, EJAB-416)
